recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:12: error: '<-' expected but '=' found.
for(i = 0 <- 5 ){
      ^Spiral:24: error: illegal start of simple expression
}
^