recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	if(angle==0){
		return;
	}
	else{
		droite(angle);
		avance(length);
	}
}
var i=0;
for(i = 0 <- 5 ){
	var l=0;
	spiral(i,90,l,3);
	l=l+1;
}
